# inter_fully_connected

./: .gitignore  README.md  pyproject.toml
inter_fully_connected/: cli.py
inter_fully_connected/assets/: cifar10_train_config.yaml
inter_fully_connected/config/: config_reader.py  train_config.py
inter_fully_connected/models/: ifc_image_classification.py  ifc_tabular_classification.py  inter_fully_connected.py
notebooks/: cifar10_train.ipynb  develop.ipynb  iris_train.ipynb
