[tool.poetry]
name = "inter-fully-connected"
version = "0.1.0"
description = "New neural network with every nodes interconnected"
authors = ["Loïc <b.loic38@laposte.net>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "inter_fully_connected"}]

[tool.poetry.scripts]
ifc = 'inter_fully_connected.cli:cli'

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl" }
torchvision =  { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-linux_x86_64.whl" }
pytorch-lightning = "^2.0.0"
ipykernel = "^6.22.0"
scipy = "^1.10.1"
tensorboard = "^2.12.0"
click = "^8.1.3"
pyyaml = "^6.0"
scikit-learn = "^1.2.2"
torchmetrics = "^0.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
